--- a/documentation/LaTeX dokumentacija/FMindeks.tex
+++ b/documentation/LaTeX dokumentacija/FMindeks.tex
@@ -93,7 +93,7 @@ PETLJA STOP \newline
 
 
 \section{Nedostaci implementacije u programskom jeziku Java}
-Implementacija ovog algoritma napravljena je u programskom jeziku Java.  Iako Java kao programski jezik nudi mnoge pogodnosti, kao jednostavnu sintaksu, dobre popratne biblioteke i automatsko upravljanje memorijom, ipak postoje i određeni nedostatci ovakvog jezika. Možda najveći nedostatak Java programskog jezika dolazi upravo od jedne predosti samog jezika, a to je automatsko upravljanje memorijom. To znači da se programski jezik sam brine oko oslobađanja i zauzimanja memorije, što može biti problematično prilikom izvođenja aplikacije koje troše puno memorije. U tim slučajevima potrebno je ručno pozvati \textit{garbage collector} kako bi oslobodio zauzetu memoriju, no to nažalost opet ima utjecaj na brzinu izvođenja, posebno ukoliko je takvih poziva više. Osim toga, Java virtualni stroj često zauzme više memorije nego joj je uistinu potrebno, što se jako dobro može vidjeti korištenjem alata za profiliranje. To svakako predstavlja problem ukoliko program prilikom izvođenja zauzima velike količine memorije, jer se one dodatno povećaju zbog tog praznog prostora kojeg zauzme Java virtualni stroj. Iako postoje naredbe kojima se može pokušati regulirati količina memorije koju će virtualna stroj smjeti zauzeti, kao i naredbe kojima bi se trebalo moći natjerati virtualnu stroj da memoriju koju je zauzela, a ne koristi ju, vrati operacijskom sustavu, uočeno je kako je potrebno dobro podesiti parametre tih naredbi prilikom izvođenja kako bi se dobili što bolji rezultati. Osim toga, Java virtualni stroj sam po sebi zauzima dosta veliku količinu memorije (prilikom testiranja to je otprilike bilo oko 10MB), što svakako predstavlja još jedan nedostatak programskog jezika Java. Možda se memorija od 10MB ne čini kao velika količina memorije, posebice uzevši u obzir raspoloživu količinu memorije u današnjim računalima, no to svejedno nije ni zanemariva količina memorije, posebice ako se indeksiraju kraći znakovni nizovi.
+Implementacija ovog algoritma napravljena je u programskom jeziku Java.  Iako Java kao programski jezik nudi mnoge pogodnosti, kao jednostavnu sintaksu, dobre popratne biblioteke i automatsko upravljanje memorijom, ipak postoje i određeni nedostatci ovakvog jezika. Možda najveći nedostatak Java programskog jezika dolazi upravo od jedne predosti samog jezika, a to je automatsko upravljanje memorijom. To znači da se programski jezik sam brine oko oslobađanja i zauzimanja memorije, što može biti problematično prilikom izvođenja aplikacije koje troše puno memorije. U tim slučajevima potrebno je ručno pozvati \textit{garbage collector} kako bi oslobodio zauzetu memoriju, no to nažalost opet ima utjecaj na brzinu izvođenja, posebno ukoliko je takvih poziva više. Osim toga, Java virtualni stroj često zauzme više memorije nego joj je uistinu potrebno, što se jako dobro može vidjeti korištenjem alata za profiliranje. To svakako predstavlja problem ukoliko program prilikom izvođenja zauzima velike količine memorije, jer se one dodatno povećaju zbog tog praznog prostora kojeg zauzme Java virtualni stroj. Iako postoje naredbe kojima se može pokušati regulirati količina memorije koju će virtualni stroj smjeti zauzeti, kao i naredbe kojima bi se trebalo moći natjerati virtualni stroj da memoriju koju je zauzeo, a ne koristi ju, vrati operacijskom sustavu, uočeno je kako je potrebno dobro podesiti parametre tih naredbi prilikom izvođenja kako bi se dobili što bolji rezultati. Osim toga, Java virtualni stroj sam po sebi zauzima dosta veliku količinu memorije (prilikom testiranja to je otprilike bilo oko 10MB), što svakako predstavlja još jedan nedostatak programskog jezika Java. Možda se memorija od 10MB ne čini kao velika količina memorije, posebice uzevši u obzir raspoloživu količinu memorije u današnjim računalima, no to svejedno nije ni zanemariva količina memorije, posebice ako se indeksiraju kraći znakovni nizovi.
 
 Još jedan nedostatak Java programskog jezika jest što primitivni tip podatka \textit{char} zauzima dva bajta memorije. To znači da zapravo imamo dvostruko veću memorijsku složenost nego što bi htjeli. Iz tog razloga, u implementaciji se koristi tip podatka \textit{byte} kako bi se uštedjelo na memoriji. Time je limitiran broj različitih znakova koje možemo prikazati, no kako je glavni fokus ipak stavljen na DNK sekvence i nizove proteina, ovo ograničenje ne predstavlja veliki problem. Dodatno je postavljeno još jedno ograničenje, a to je da implementacija može raditi nad osnovnim skupom \textit{ASCII} znakova. To je napravljeno iz razloga što Java programski jezik nema \textit{unsigned} inačice tipova podataka (opet jedan veliki nedostatak), te ukoliko bi se htjelo raditi nad proširenim skupom \textit{ASCII} znakova, moralo bi se paziti na preslikavanje negativnih vrijednosti u njihove pozitivne ekvivalente, zadržavajući leksički poredak. Taj postupak bi uveo dodatne operacije koje bi mogle utjecati na performanse izvođenja ovog algoritma, te iz tog razloga nije napravljen (iako doduše implementaciju nije teško proširiti tako da radi i s proširenim skupom \textit{ASCII} znakova). 
 
