Addes dome changes

--- a/documentation/LaTeX dokumentacija/Dokumentacija.tex
+++ b/documentation/LaTeX dokumentacija/Dokumentacija.tex
@@ -31,6 +31,8 @@
 \titleformat{\chapter}[display]{\Huge\bfseries}{}{10pt}{\Huge\bfseries}
 \titlespacing*{\chapter}{0pt}{-55pt}{40pt}
 
+\setcounter{secnumdepth}{3}
+\setcounter{tocdepth}{3}
 
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 
